add more content and replace

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!--=====TITLE=======-->
-  <title>Fast Energy</title>
+  <title>EPR</title>
 
   <!--=====CSS=======-->
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -55,207 +55,214 @@
 </div> 
 
 <!--=====progress END=======-->
-<header class="header about-bg">
-  <div class="header-area header" id="header">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="header-elements">
-            <div class="site-logo">
-              <a href="index.html"
-                ><img src="assets/img/logo/epr.png" width="110px" alt=""
-              /></a>
-            </div>
-            <div class="main-menu-ex dropdown-shadow-area menu-bg-area">
-              <ul>
-                <li>
-                  <a
-                    href="about.html"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >About
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >Resources
-                    <span><i class="fa-solid fa-angle-down"></i></span
-                  ></a>
+ <header class="header about-bg">
+      <div class="header-area header" id="header">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="header-elements">
+                <div class="site-logo">
+                  <a href="index.html"
+                    ><img src="assets/img/logo/epr.png" width="110px" alt=""
+                  /></a>
+                </div>
+                <div class="main-menu-ex dropdown-shadow-area menu-bg-area">
                   <ul>
                     <li>
                       <a
-                        href="about-saf.html"
+                        href="about.html"
                         class="font-roboto font-18 weight-400 color-11"
-                        >About SAF</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a
-                    href="service.html"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >Services</a
-                  >
-                </li>
-
-                <li>
-                  <a
-                    href="membership.html"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >Membership</a
-                  >
-                </li>
-
-                <li>
-                  <a
-                    href="#"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >Events
-                    <span><i class="fa-solid fa-angle-down"></i></span
-                  ></a>
-                  <ul>
-                    <li>
-                      <a
-                        href="upcomming-event.html"
-                        class="font-roboto font-18 weight-400 color-11"
-                        >Upcoming
+                        >About
                       </a>
                     </li>
                     <li>
                       <a
-                        href="past-events.html"
+                        href="#"
                         class="font-roboto font-18 weight-400 color-11"
-                      >
-                        Past</a
+                        >Resources
+                        <span><i class="fa-solid fa-angle-down"></i></span
+                      ></a>
+                      <ul>
+                        <li>
+                          <a
+                            href="about-epr.html"
+                            class="font-roboto font-18 weight-400 color-11"
+                            >About SAF</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a
+                        href="service.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Services</a
                       >
                     </li>
+
+                    <li>
+                      <a
+                        href="membership.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Membership</a
+                      >
+                    </li>
+
+                    <li>
+                      <a
+                        href="#"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Events
+                        <span><i class="fa-solid fa-angle-down"></i></span
+                      ></a>
+                      <ul>
+                        <li>
+                          <a
+                            href="upcomming-event.html"
+                            class="font-roboto font-18 weight-400 color-11"
+                            >Upcoming
+                          </a>
+                        </li>
+                        <li>
+                          <a
+                            href="past-events.html"
+                            class="font-roboto font-18 weight-400 color-11"
+                          >
+                            Past</a
+                          >
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a
+                        href="gallery.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Gallery
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="news.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >News
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
-                </li>
-                <li>
-                  <a
-                    href="gallery.html"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >Gallery
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="news.html"
-                    class="font-roboto font-18 weight-400 color-11"
-                    >News
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="contact-3 d-lg-block d-none">
-              <div class="all-3-btn theme-btn">
-                <a
-                  href="contact.html"
-                  class="font-roboto font-16 lineh-24 weight-600 color d-inline-block"
-                  >Contact Us
-                  <span><i class="fa-solid fa-arrow-right"></i></span
-                ></a>
+                </div>
+                <div class="contact-3 d-lg-block d-none">
+                  <div class="all-3-btn theme-btn">
+                    <a
+                      href="contact.html"
+                      class="font-roboto font-16 lineh-24 weight-600 color d-inline-block"
+                      >Contact Us
+                      <span><i class="fa-solid fa-arrow-right"></i></span
+                    ></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</header>
-<!--=====HEADER END=======-->
+    </header>
+    <!--=====HEADER END=======-->
 
-<!--=====Mobile header start=======-->
-<div class="mobile-header mobile-header-4 d-block d-lg-none">
-  <div class="container-fluid">
-    <div class="col-12">
-      <div class="mobile-header-elements">
-        <div class="mobile-logo">
-          <!-- <a href="index.html"><img src="assets/img/logo/epower-logo-1.png" alt=""></a> -->
-        </div>
-        <div class="mobile-nav-icon black-nav border-black">
-          <i class="fa-solid fa-bars"></i>
+    <!--=====Mobile header start=======-->
+    <div class="mobile-header mobile-header-4 d-block d-lg-none">
+      <div class="container-fluid">
+        <div class="col-12">
+          <div class="mobile-header-elements">
+            <div class="mobile-logo">
+              <!-- <a href="index.html"><img src="assets/img/logo/epower-logo-1.png" alt=""></a> -->
+            </div>
+            <div class="mobile-nav-icon black-nav border-black">
+              <i class="fa-solid fa-bars"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="mobile-sidebar">
-  <div class="menu-close">
-    <i class="fa-solid fa-xmark"></i>
-  </div>
-  <div class="mobile-nav">
-    <ul class="mobile-nav-list">
-      <li class="font-roboto font-18 weight-400">
-        <a href="about.html">About Us</a>
-      </li>
-      <li>
-        <a href="#" class="font-roboto font-18 weight-400"
-          >Resources <span></span
-        ></a>
-        <ul>
+    <div class="mobile-sidebar">
+      <div class="menu-close">
+        <i class="fa-solid fa-xmark"></i>
+      </div>
+      <div class="mobile-nav">
+        <ul class="mobile-nav-list">
+          <li class="font-roboto font-18 weight-400">
+            <a href="about.html">About Us</a>
+          </li>
           <li>
-            <a href="about-saf.html" class="font-roboto font-18 weight-400"
-              >About SAF</a
-            >
+            <a href="#" class="font-roboto font-18 weight-400"
+              >Resources <span></span
+            ></a>
+            <ul>
+              <li>
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
+                  >About SAF</a
+                >
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="service.html" class="font-roboto font-18 weight-400"
+              >Services <span></span
+            ></a>
+          </li>
+          <li>
+            <a href="membership.html" class="font-roboto font-18 weight-400"
+              >Membership <span></span
+            ></a>
+          </li>
+
+          <li>
+            <a href="#" class="font-roboto font-18 weight-400"
+              >Events <span></span
+            ></a>
+            <ul>
+              <li>
+                <a
+                  href="upcomming-event.html"
+                  class="font-roboto font-18 weight-400"
+                  >Upcoming
+                </a>
+              </li>
+              <li>
+                <a
+                  href="past-events.html"
+                  class="font-roboto font-18 weight-400"
+                >
+                  Past</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="gallery.html" class="font-roboto font-18 weight-400"
+              >Gallery <span></span
+            ></a>
+          </li>
+
+          <li>
+            <a href="news.html" class="font-roboto font-18 weight-400"
+              >News <span></span
+            ></a>
+          </li>
+
+          <li class="font-roboto font-18 weight-400">
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
-      </li>
-
-      <li>
-        <a href="service.html" class="font-roboto font-18 weight-400"
-          >Services <span></span
-        ></a>
-      </li>
-      <li>
-        <a href="membership.html" class="font-roboto font-18 weight-400"
-          >Membership <span></span
-        ></a>
-      </li>
-
-      <li>
-        <a href="#" class="font-roboto font-18 weight-400"
-          >Events <span></span
-        ></a>
-        <ul>
-          <li>
-            <a
-              href="upcomming-event.html"
-              class="font-roboto font-18 weight-400"
-              >Upcoming
-            </a>
-          </li>
-          <li>
-            <a
-              href="past-events.html"
-              class="font-roboto font-18 weight-400"
-            >
-              Past</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="gallery.html" class="font-roboto font-18 weight-400"
-          >Gallery <span></span
-        ></a>
-      </li>
-
-      <li>
-        <a href="news.html" class="font-roboto font-18 weight-400"
-          >News <span></span
-        ></a>
-      </li>
-
-      <li class="font-roboto font-18 weight-400">
-        <a href="contact.html">Contact</a>
-      </li>
-    </ul>
-  </div>
-</div>
+      </div>
+    </div>
 <!--=====Mobile header end=======-->
 
 <!--=====WELCOME STARTS=======-->
@@ -275,7 +282,7 @@
 <!--=====WELCOME END=======-->
 
 <!--=====CONTACT STARTS=======-->
-    <div class="contact-section-area section-padding5 ">
+    <div class="contact-section-area section-padding5 pb-0 ">
         <div class="container mb-5">
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -289,8 +296,8 @@
                         </div>
                         <div class="calls-area-flex margin-b24">
                             <span><img src="assets/img/icons/gamil-icon.png" alt=""></span>
-                            <p><a href="#" class="font-18 font-cm weight-600 color lineh-26 "> 
-                              sg@isafa.in</a></p>
+                            <p><a href="mailto:sg@epra.in" class="font-18 font-cm weight-600 color lineh-26 "> 
+                              sg@epra.in</a></p>
                         </div>
                         <div class="calls-area-flex">
                             <span><img src="assets/img/icons/location-icon.png" alt=""></span>
@@ -441,7 +448,7 @@
         </div>
         <div class="phn-setails">
           <span><img src="assets/img/icons/email.png" alt=""></span>
-          <a href="mailto:sg@isafa.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@isafa.in</a>
+          <a href="mailto:sg@epra.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@epra.in</a>
         </div>
       </div>
       <div class="col-lg-3">
