--- a/past-events.html
+++ b/past-events.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>ISAFA</title>
+    <title>EPR</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -71,7 +71,7 @@
 
     <!--=====HEADER START=======-->
 
-    <header class="header about-bg">
+  <header class="header about-bg">
       <div class="header-area header" id="header">
         <div class="container">
           <div class="row">
@@ -101,7 +101,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -163,6 +163,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -214,7 +221,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -560,7 +567,7 @@
             </div>
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt=""></span>
-              <a href="mailto:sg@isafa.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@isafa.in</a>
+              <a href="mailto:sg@epra.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@epra.in</a>
             </div>
           </div>
           <div class="col-lg-3">
