--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>ISAFA</title>
+    <title>EPR</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -93,7 +93,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -155,6 +155,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -206,7 +213,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -319,18 +326,18 @@
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ● Guidance on plastic, e-waste, batteries, and tyre EPR laws
+                Guidance on plastic, e-waste, batteries, and tyre EPR laws
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ● Assistance in fulfilling legal obligations under government
+                Assistance in fulfilling legal obligations under government
                 regulations
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ● Support in achieving global sustainability and carbon
+                Support in achieving global sustainability and carbon
                 neutrality goals
               </p>
             </div>
@@ -345,17 +352,17 @@
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ● Workshops and seminars for businesses, recyclers, and policymakers
+                Workshops and seminars for businesses, recyclers, and policymakers
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ●	Awareness campaigns on responsible waste disposal and recycling
+                	Awareness campaigns on responsible waste disposal and recycling
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-              ●	Knowledge-sharing sessions with global industry experts
+              	Knowledge-sharing sessions with global industry experts
               </p>
             </div>
           </div>
@@ -365,22 +372,22 @@
             <div class="service-3-text-area hover-bg-2 border-none">
               <img src="assets/img/icons/o2.png" alt="" width="60px" />
               <h1 class="font-cm font-22 lineh-30 weight-600 color-11">
-                Training & Capacity Building
+                Advisory Services & Strategic Roadmaps
               </h1>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-               ●	Customised waste management solutions for different industries
+               	Customised waste management solutions for different industries
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-              ●	Circular economy strategies for businesses to enhance sustainability
+              	Circular economy strategies for businesses to enhance sustainability
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-              ●	Expert consultation on carbon credits and waste-to-value models
+              	Expert consultation on carbon credits and waste-to-value models
               </p>
             </div>
           </div>
@@ -394,17 +401,17 @@
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-               ●	AI and IoT-based tracking for efficient waste segregation and recycling
+               	AI and IoT-based tracking for efficient waste segregation and recycling
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-              ●	Digital tools for monitoring compliance and reporting progress
+              	Digital tools for monitoring compliance and reporting progress
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-              ●	Data-driven analytics for improved resource efficiency
+              	Data-driven analytics for improved resource efficiency
               </p>
             </div>
           </div>
@@ -418,17 +425,17 @@
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-                ●	Connect with government bodies, recyclers, and key industry players
+                	Connect with government bodies, recyclers, and key industry players
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-               ●	Participate in EPR policy discussions and advocacy initiatives
+               	Participate in EPR policy discussions and advocacy initiatives
               </p>
               <p
                 class="d-inline-block font-cm font-16 mb-1 weight-400 color-12"
               >
-             ●	Gain visibility through IEPRA-led sustainability programs
+             	Gain visibility through IEPRA-led sustainability programs
               </p>
             </div>
           </div>
@@ -533,9 +540,9 @@
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt="" /></span>
               <a
-                href="mailto:sg@isafa.in"
+                href="mailto:sg@epra.in"
                 class="font-cm font-16 lineh-26 weight-400 color-11"
-                >sg@isafa.in</a
+                >sg@epra.in</a
               >
             </div>
           </div>
