--- a/upcomming-events.html
+++ b/upcomming-events.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>ISAFA</title>
+    <title>EPR</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="assets/css/plugins/responsive.css" />
 
     <!--=====FAV-ICoN=======-->
-    <link rel="shortcut icon" href="assets/img/logo/logo7.png" />
+    <link rel="shortcut icon" href="assets/img/logo/epr.png" />
     <!--=====JQUERY=======-->
     <script src="assets/js/plugins/jquery-3-6-0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -61,7 +61,7 @@
     <!--=====progress END=======-->
 
     <!--=====HEADER START=======-->
-    <header class="header about-bg">
+   <header class="header about-bg">
       <div class="header-area header" id="header">
         <div class="container">
           <div class="row">
@@ -69,7 +69,7 @@
               <div class="header-elements">
                 <div class="site-logo">
                   <a href="index.html"
-                    ><img src="assets/img/logo/saf.png" width="110px" alt=""
+                    ><img src="assets/img/logo/epr.png" width="110px" alt=""
                   /></a>
                 </div>
                 <div class="main-menu-ex dropdown-shadow-area menu-bg-area">
@@ -91,7 +91,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -153,6 +153,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -204,7 +211,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -287,93 +294,104 @@
       </div>
     </div>
 
-    <div class="service-section-3-areas section-padding8">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div
-              class="service-text-header text-center margin-b80 author-about-text"
-            >
-              <span
-                class="font-cm font-18 lineh-21 weight-500 margin-b color-11 border-2"
-                >Upcoming</span
-              >
-              <!-- <h1 class="font-cm font-45 lineh-54 weight-600 color-11">
-                All energy solutions
-              </h1> -->
-            </div>
-          </div>
+  <div class="service-section-3-areas section-padding8">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="service-text-header text-center margin-b80 author-about-text">
+          <span class="font-cm font-18 lineh-21 weight-500 margin-b color-11 border-2">
+            Upcoming
+          </span>
+          <h1 class="font-cm font-45 lineh-54 weight-600 color-11 mt-3">
+            India EPR Conclave 2025 Highlights
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-26 color-12 mt-2">
+            A premier gathering of policymakers, producers, recyclers, and sustainability champions to shape the future of India's circular economy.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="service-3-text-area hover-bg-2 border-none">
-              <img src="assets/img/icons/settings-1.png" alt="" />
-              <h1 class="font-cm font-22 lineh-30 weight-600 color-11">
-                Launch of the Report
-              </h1>
-              <p class="font-cm font-16 weight-400 lineh-24 color-12">
-                Roadmap of Scaling SAF in India: Key insights and strategies for
-                accelerating SAF adoption in alignment with international policy
-                mechanisms.
-              </p>
-            </div>
-          </div>
+      <!-- Launch of Report -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg-2 border-none text-center">
+          <img src="assets/img/icons/settings-1.png" alt="Report Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color-11 mt-3">
+            Launch of the Report
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color-12">
+            Roadmap for Scaling EPR in India – Strategies and insights to enhance EPR frameworks and enable circular economy adoption.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="service-3-text-area hover-bg border-none">
-              <img src="assets/img/icons/star-1.png" alt="" />
-              <h1 class="font-cm font-22 lineh-30 weight-600 color">
-                Next-Gen SAF Technologies
-              </h1>
-              <p class="font-cm font-16 weight-400 lineh-24 color">
-                Exploring cutting-edge innovations and scalable solutions for
-                sustainable aviation <br />
-                fuel production.
-              </p>
-            </div>
-          </div>
+      <!-- Policy & Regulatory Sessions -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg border-none text-center">
+          <img src="assets/img/icons/star-1.png" alt="Policy Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color mt-3">
+            Policy & Regulatory Sessions
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color">
+            Explore India’s evolving EPR regulations, compliance challenges, and global best practices in waste governance.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="service-3-text-area hover-bg-2 border-none">
-              <img src="assets/img/icons/unnoion-1.png" alt="" />
-              <h1 class="font-cm font-22 lineh-30 weight-600 color-11">
-                Building Regional & Global SAF Hubs
-              </h1>
-              <p class="font-cm font-16 weight-400 lineh-24 color-12">
-                Strengthening supply chains and establishing a trusted Book &
-                Claim system for seamless SAF deployment.
-              </p>
-            </div>
-          </div>
+      <!-- Next-Gen Recycling Tech -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg-2 border-none text-center">
+          <img src="assets/img/icons/unnoion-1.png" alt="Tech Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color-11 mt-3">
+            Next-Gen Recycling Technologies
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color-12">
+            Discover cutting-edge technologies in eco-design, AI waste tracking, and digital EPR compliance platforms.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="service-3-text-area hover-bg-2 border-none">
-              <img src="assets/img/icons/unnoion-1.png" alt="" />
-              <h1 class="font-cm font-22 lineh-30 weight-600 color-11">
-                Unlocking SAF Investments
-              </h1>
-              <p class="font-cm font-16 weight-400 lineh-24 color-12">
-                Exploring global financing and investment opportunities to scale
-                SAF projects and drive aviation decarbonisation.
-              </p>
-            </div>
-          </div>
+      <!-- EPR Investment & Finance -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg-2 border-none text-center">
+          <img src="assets/img/icons/star-1.png" alt="Investment Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color-11 mt-3">
+            Unlocking EPR Investments
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color-12">
+            Dive into financing mechanisms, carbon markets, and PPPs to drive scalable EPR initiatives.
+          </p>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="service-3-text-area hover-bg-2 border-none">
-              <img src="assets/img/icons/unnoion-1.png" alt="" />
-              <h1 class="font-cm font-22 lineh-30 weight-600 color-11">
-                Exclusive Networking with the SAF Ecosystem
-              </h1>
-              <p class="font-cm font-16 weight-400 lineh-24 color-12">
-                Connect with over 200 delegates, including policymakers,
-                investors, and industry leaders, particularly from the logistics
-                and tourism sectors, as well as civil society organisations.
-              </p>
-            </div>
-          </div>
+      <!-- Global Perspectives -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg-2 border-none text-center">
+          <img src="assets/img/icons/unnoion-1.png" alt="Global Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color-11 mt-3">
+            Global Perspectives on EPR
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color-12">
+            Learn from international leaders and models driving global circular economy success.
+          </p>
+        </div>
+      </div>
+
+      <!-- Networking & Awards -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="service-3-text-area hover-bg-2 border-none text-center">
+          <img src="assets/img/icons/star-1.png" alt="Networking Icon" />
+          <h1 class="font-cm font-22 lineh-30 weight-600 color-11 mt-3">
+            Networking & EPR Awards
+          </h1>
+          <p class="font-cm font-16 weight-400 lineh-24 color-12">
+            Connect with 200+ delegates and celebrate leaders driving innovation in EPR and sustainability.
+          </p>
         </div>
       </div>
     </div>
+  </div>
+</div>
+
 
     <!--=====FOOTER STARTS=======-->
     <div class="cta-2-section-area-starts section-padding9">
@@ -425,7 +443,7 @@
           <div class="col-lg-12">
             <div class="mini-menu">
               <div class="menu-logo">
-                <img src="assets/img/logo/saf.png" alt="" width="110px" />
+                <img src="assets/img/logo/epr.png" alt="" width="110px" />
               </div>
               <div class="mini-menu-area">
                 <ul>
@@ -465,9 +483,9 @@
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt="" /></span>
               <a
-                href="mailto:sg@isafa.in"
+                href="mailto:sg@epra.in"
                 class="font-cm font-16 lineh-26 weight-400 color-11"
-                >sg@isafa.in</a
+                >sg@epra.in</a
               >
             </div>
           </div>
