--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>ISAFA - about us</title>
+    <title>EPR - about us</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -101,7 +101,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -163,6 +163,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -214,7 +221,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -306,7 +313,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="authoe-about-img">
-              <img src="assets/img/bg/about_us.jpg" alt="" />
+              <img src="assets/img/bg/about.jpg" alt="" style="width: 100%; height: 600px; object-fit: cover;" />
             </div>
           </div>
           <div class="col-lg-6">
@@ -318,7 +325,7 @@
               <h1
                 class="font-cm font-42 weight-600 color-13 lineh-50 margin-b24"
               >
-                Empowering Sustainability and Circularity
+                Driving India’s Sustainability Goals Through EPR
               </h1>
               <p class="font-cm font-16 lineh-26 weight-400 color-12">
                 The EPR Association (EPRA) was launched at the India Energy Week 2025 in New Delhi, to bring together producers, importers, recyclers, and policymakers to create a structured and effective EPR ecosystem in India. Our alliance ensures industries meet regulatory obligations, promotes circular economy practices, and enables compliance with waste management laws for plastics, e-waste, batteries, and other sectors.
@@ -340,39 +347,7 @@
     </div>
     <!--=====SERVICE END=======-->
     <!--=====Vision=======-->
-    <div class="about-4-section-areas section-padding5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="about-4-aurhor-text-area author-about-text">
-              <span
-                class="font-cm font-18 weight-500 color-7 d-inline-block margin-b border-1"
-                >Our Mission</span
-              >
-              <p class="font-cm font-16 weight-400 lineh-26 color-12 margin-b">
-              Empowering industries, policymakers, and stakeholders to implement sustainable EPR frameworks, drive policy advocacy, and create a zero-waste future.
-              </p>
-
-              <!-- <div class="all-3-btn">
-                <a href="contact.html" class="font-cm font-16 lineh-24 weight-600 color d-inline-block">Contact Us<span><i class="fa-solid fa-arrow-right"></i></span></a>
-               </div> -->
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="abput-4-images">
-              <img src="assets/img/bg/vision.jpg" alt="" />
-              <!-- <div class="cards bg-color">
-              <div class="cards-14">
-                <h1 class="font-cm font-42 weight-500 lineh-50 color">76 </h1>
-                <span class="font-cm font-16 lineh-21 weight-500 color">Projects <br> completed</span>
-              </div>
-            </div> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  
     <!--=====Vision END=======-->
 
     <!-- mision start -->
@@ -380,11 +355,7 @@
     <div class="service-section-3-areas section-padding5">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="authoe-about-img">
-              <img src="assets/img/bg/mission (1).jpg" alt="" />
-            </div>
-          </div>
+        
           <div class="col-lg-6">
             <div class="author-about-text padding-section">
               <span
@@ -419,10 +390,48 @@
                  </div> -->
             </div>
           </div>
+            <div class="col-lg-6">
+            <div class="authoe-about-img">
+              <img src="assets/img/bg/vi.jpg" alt="" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  <div class="about-4-section-areas section-padding5">
+      <div class="container">
+        <div class="row align-items-center">
+           <div class="col-lg-6">
+            <div class="abput-4-images">
+              <img src="assets/img/bg/mis.jpg" alt="" />
+              <!-- <div class="cards bg-color">
+              <div class="cards-14">
+                <h1 class="font-cm font-42 weight-500 lineh-50 color">76 </h1>
+                <span class="font-cm font-16 lineh-21 weight-500 color">Projects <br> completed</span>
+              </div>
+            </div> -->
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="about-4-aurhor-text-area author-about-text">
+              <span
+                class="font-cm font-18 weight-500 color-7 d-inline-block margin-b border-1"
+                >Our Mission</span
+              >
+              <p class="font-cm font-16 weight-400 lineh-26 color-12 margin-b">
+              Empowering industries, policymakers, and stakeholders to implement sustainable EPR frameworks, drive policy advocacy, and create a zero-waste future.
+              </p>
 
+              <!-- <div class="all-3-btn">
+                <a href="contact.html" class="font-cm font-16 lineh-24 weight-600 color d-inline-block">Contact Us<span><i class="fa-solid fa-arrow-right"></i></span></a>
+               </div> -->
+            </div>
+          </div>
+
+         
+        </div>
+      </div>
+    </div>
     <!-- mission end  -->
 
     <!--=====TEAM STARTS=======-->
@@ -1120,7 +1129,7 @@
             </div>
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt=""></span>
-              <a href="mailto:sg@isafa.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@isafa.in</a>
+              <a href="mailto:sg@epra.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@epra.in</a>
             </div>
           </div>
           <div class="col-lg-3">
