--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>Fast Energy</title>
+    <title>EPR</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -62,7 +62,7 @@
 
     <!--=====progress END=======-->
 
-    <header class="header about-bg">
+   <header class="header about-bg">
       <div class="header-area header" id="header">
         <div class="container">
           <div class="row">
@@ -92,7 +92,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -154,6 +154,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -205,7 +212,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -330,14 +337,14 @@
                   <div class="latest-blog-area">
                     <div class="blog-1">
                       <img
-                        src="assets/img/gallery/05.jpg"
+                        src="assets/img/bg/past.jpg"
                         alt=""
                       />
                     </div>
                     <div class="latest-author-text">
                       <a href="https://www.millenniumpost.in/business/india-saf-alliance-launched-to-propel-sustainable-aviation-energy-goals-597582#google_vignette" class="color-7">
                         <h1 class="font-cm font-22 weight-600 lineh-30">
-                          India SAF Alliance launched to propel sustainable aviation, energy goals
+                          Launch of EPR Association vision document by Shri. Jitin Prasada, Hon’ble Minister of State, Ministry of Commerce & Industry, Government of India
                         </h1></a
                       >
                       <div class="latest-flex-text">
@@ -453,7 +460,7 @@
             </div>
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt=""></span>
-              <a href="mailto:sg@isafa.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@isafa.in</a>
+              <a href="mailto:sg@epra.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@epra.in</a>
             </div>
           </div>
           <div class="col-lg-3">
