--- a/upcomming-event.html
+++ b/upcomming-event.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--=====TITLE=======-->
-    <title>ISAFA</title>
+    <title>EPR</title>
 
     <!--=====CSS=======-->
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
@@ -71,7 +71,7 @@
 
     <!--=====HEADER START=======-->
 
-    <header class="header about-bg">
+  <header class="header about-bg">
       <div class="header-area header" id="header">
         <div class="container">
           <div class="row">
@@ -101,7 +101,7 @@
                       <ul>
                         <li>
                           <a
-                            href="about-saf.html"
+                            href="about-epr.html"
                             class="font-roboto font-18 weight-400 color-11"
                             >About SAF</a
                           >
@@ -163,6 +163,13 @@
                         >News
                       </a>
                     </li>
+                    <li>
+                      <a
+                        href="join-us.html"
+                        class="font-roboto font-18 weight-400 color-11"
+                        >Join Us
+                      </a>
+                    </li>
                   </ul>
                 </div>
                 <div class="contact-3 d-lg-block d-none">
@@ -214,7 +221,7 @@
             ></a>
             <ul>
               <li>
-                <a href="about-saf.html" class="font-roboto font-18 weight-400"
+                <a href="about-epr.html" class="font-roboto font-18 weight-400"
                   >About SAF</a
                 >
               </li>
@@ -305,13 +312,14 @@
           <div class="col-lg-4">
             <div class="service-3-text-area hover-bg-2 border-none">
               <h1 class="font-cm font-24 lineh-30 weight-600 color-11 text-center">
-                India Sustainable Aviation Fuel (SAF) Conclave & Awards 2025
+                Advancing Circular Economy for a Sustainable Tomorrow
               </h1>
               <p class="font-cm font-20 lineh-30 weight-600 color-11 text-center mb-2">
-                Date: 3rd June 2025
+                Date: July 2025 (Two-day event)
               </p>
               <p class="font-cm font-16 lineh-30 weight-600 mb-2 color-11 text-center">
-                Venue: Le Méridien New Delhi
+                Venue:  New Delhi, India
+
               </p>
               <div class="all-3-btn text-center">
                 <a
@@ -393,7 +401,7 @@
             </div>
             <div class="phn-setails">
               <span><img src="assets/img/icons/email.png" alt=""></span>
-              <a href="mailto:sg@isafa.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@isafa.in</a>
+              <a href="mailto:sg@epra.in" class="font-cm font-16 lineh-26 weight-400 color-11">sg@epra.in</a>
             </div>
           </div>
           <div class="col-lg-3">
